notification/manifests/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: bisry/earlyvet-notification
          ports:
            - containerPort: 5005
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
