notification/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  type: ClusterIP
  ports:
    - port: 5005
      targetPort: 5005
      protocol: TCP
